# nodetool-comfy

./: .gitignore  MANIFEST.in  README.md  comfy_nodes_metadata.json  pyproject.toml  requirements.txt
scripts/: README.md  generate_proxy_nodes.py  import_workflows.py  parse_comfy_nodes.py  sync_comfyui.py  type_mappings.py
src/: nodes.py
src/comfy_extras/: nodes_pixart.py
src/custom_nodes/gguf/: loader.py
src/nodetool/nodes/comfy/: __init__.py  constants.py  image_to_image.py  lora.py  text_to_image.py  utils.py  workflow_base.py
src/nodetool/package_metadata/: nodetool-comfy.json
tests/: __init__.py  test_import_workflows.py
workflows/: image_to_image.json  image_to_image.yaml  sdxl_text_to_image.json  sdxl_text_to_image.yaml
