[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-comfy"
version = "0.6.2-rc.6"
description = "ComfyUI nodes for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.10.13"

dependencies = [
  "nodetool-core==0.6.2-rc.6",
  "torch==2.8.0",
  "torchsde",
  "torchvision",
  "torchaudio",
  "einops>=0.8.0",
  "kornia>=0.7.4",
  "omegaconf>=2.3.0",
  "spandrel>=0.4.0",
  "transformers>=4.48.1",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.5",
  "aiohttp>=3.11.2",
  "yarl>=1.18.0",
  "pyyaml>=6.0.2",
  # "Pillow>=11.0.0",
  "scipy>=1.14.1",
  "trimesh>=3.21.1",
  "tqdm>=4.67.0",
  "psutil>=6.1.0",
  "xformers==0.0.32.post2; sys_platform != 'darwin'",
  "yacs>=0.1.8",
  "yapf>=0.40.2",
  "fvcore>=0.1.5.post20221221",
  "av"
]

[project.urls]
repository = "https://github.com/nodetool-ai/nodetool-comfy"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/nodetool",
  "src/comfy",
  "src/comfy_api",
  "src/comfy_extras",
  "src/comfy_config",
  "src/comfy_execution",
  "src/custom_nodes",
  "src/folder_paths.py",
  "src/latent_preview.py",
  "src/nodes.py",
  "src/node_helpers.py",
  "src/protocol.py",
]
artifacts = [
  "src/nodetool/package_metadata/nodetool-comfy.json",
  "package_metadata/nodetool-comfy.json",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nodetool = ["package_metadata/nodetool-comfy.json"]
